force-app/main/default/objects/numm__VATAllocation__c/numm__VATAllocation__c.object-meta.xml
<CustomObject>
    <description>Objet d&#39;affectation des codes de TVA, des comptes de Tva, des faits générateurs</description>
    <label>Affectation de TVA</label>
    <nameField>
        <displayFormat>ATVA-{00000}</displayFormat>
        <label>Affectation de TVA</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affectations de TVA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>