force-app/main/default/objects/numm__VATAllocation__c/fields/numm__AccountingCode__c.field-meta.xml
<CustomField>
    <fullName>numm__AccountingCode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Saisir le compte de TVA à récupérer lors de la saisie</inlineHelpText>
    <label>Compte général</label>
    <referenceTo>numm__AccountingCode__c</referenceTo>
    <relationshipLabel>affectations de TVA</relationshipLabel>
    <relationshipName>affectations_de_TVA</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>