force-app/main/default/objects/numm__VATAllocation__c/fields/numm__AccountingProrataCode__c.field-meta.xml
<CustomField>
    <fullName>numm__AccountingProrataCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Ne rien indiquer lorsque le compte non déductible correspond au compte d&#39;origine hors taxe de la saisie. Dans le cas contraire, préciser le compte non déductible de prorata de TVA</inlineHelpText>
    <label>Compte prorata non déductible</label>
    <referenceTo>numm__AccountingCode__c</referenceTo>
    <relationshipLabel>affectations de TVA (Compte prorata non déductible)</relationshipLabel>
    <relationshipName>affectations_de_TVA2</relationshipName>
    <type>Lookup</type>
</CustomField>