force-app/main/default/objects/numm__VATAllocation__c/fields/numm__AccountingReverseCharge__c.field-meta.xml
<CustomField>
    <fullName>numm__AccountingReverseCharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Saisir le compte d&#39;auto-liquidation</inlineHelpText>
    <label>Compte d&#39;auto-liquidation</label>
    <referenceTo>numm__AccountingCode__c</referenceTo>
    <relationshipLabel>affectations de TVA (Compte d&#39;auto-liquidation)</relationshipLabel>
    <relationshipName>affectations_de_TVA1</relationshipName>
    <type>Lookup</type>
</CustomField>