force-app/main/default/objects/numm__VATAllocation__c/fields/numm__Categorie_de_journal__c.field-meta.xml
<CustomField>
    <fullName>numm__Categorie_de_journal__c</fullName>
    <label>Catégorie de journal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Achat</fullName>
            </value>
            <value>
                <fullName>Vente</fullName>
            </value>
            <value>
                <fullName>Banque</fullName>
            </value>
            <value>
                <fullName>Opération diverse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>