force-app/main/default/objects/numm__VATAllocation__c/fields/numm__Fait_generateur__c.field-meta.xml
<CustomField>
    <fullName>numm__Fait_generateur__c</fullName>
    <label>Fait générateur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Encaissement</fullName>
            </value>
            <value>
                <fullName>Débit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>