force-app/main/default/objects/numm__VATAllocation__c/fields/numm__Taux_de_TVA__c.field-meta.xml
<CustomField>
    <fullName>numm__Taux_de_TVA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code TVA</label>
    <referenceTo>numm__VATRate__c</referenceTo>
    <relationshipLabel>affectations de TVA</relationshipLabel>
    <relationshipName>affectations_de_TVA</relationshipName>
    <type>Lookup</type>
</CustomField>