force-app/main/default/objects/numm__VATAllocation__c/fields/numm__Type__c.field-meta.xml
<CustomField>
    <fullName>numm__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Biens et services</fullName>
            </value>
            <value>
                <fullName>Immobilisations</fullName>
            </value>
            <value>
                <fullName>Marchandises</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>