force-app/main/default/objects/numm__VATAllocation__c/validationRules/numm__BlocageTypeSiVente.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__BlocageTypeSiVente</fullName>
    <active>true</active>
    <errorConditionFormula>NOT($User.numm__BypassRegles__c) &amp;&amp;  TEXT(numm__Categorie_de_journal__c) = &#39;Vente&#39; 
&amp;&amp;  (ISBLANK( TEXT(numm__Type__c) ) = false  &amp;&amp;  ISNULL( TEXT(numm__Type__c))  = false)</errorConditionFormula>
    <errorDisplayField>numm__Type__c</errorDisplayField>
    <errorMessage>Pour la catégorie Vente, le type doit être nulle.</errorMessage>
</ValidationRule>